--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+/* In your CSS file */
+.custom-datepicker {
+  z-index: 9999 !important; /* Set a high z-index */
+  position: relative; /* Ensure it's positioned correctly */
+}
